[package]
name = "stream-deck-esp32"
version = "0.1.0"
authors = ["Felipe Lima <felipena.lima@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[package.metadata.espflash]
partition_table = "partition.csv"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1.0.81"
log = { version = "0.4", default-features = false }
toml-cfg = "0.2.0"
esp-idf-svc = "0.48"
esp-idf-hal = "0.43.1"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.2.0"
